--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 </div>
 </center>
 
-	<div class="block">
+<!--	<div class="block">
 		<p><h4><a href="http://hubblesite.org/" target="_blank">hubblesite</a></h4>
 		</p>
 	</div>
@@ -56,7 +56,21 @@
 	<div class="block_2">
 		<p><h4><a href="http://www.spacedaily.com/" target="_blank">spacedaily</a></h4>
 		</p>
-	</div>
+	</div> -->
+	<table class="block">
+		<tr> 
+			<th><center><h4>
+				<a href="http://www.spacedaily.com/" target="_blank">spacedaily</a>
+			</center></h4></th>
+			<th><center><h4>
+				<a href="http://www.nasa.gov/" target="_blank">nasa</a>
+			</center></h4></th>
+
+			<th><center><h4>
+				<a href="http://hubblesite.org/" target="_blank">hubblesite</a>
+			<center></h4></th>
+		</tr>
+	</table>
 
 </body>
 <footer>
